New folder (2)/Shopmee/app/src/main/java/com/example/shopmee/paymentbuy.java
package com.example.shopmee;

import android.content.Intent;
import android.content.SharedPreferences;
import android.os.Bundle;
import android.preference.PreferenceManager;
import android.support.v7.app.AppCompatActivity;
import android.view.View;
import android.widget.Button;
import android.widget.EditText;
import android.widget.Toast;

import com.android.volley.DefaultRetryPolicy;
import com.android.volley.Request;
import com.android.volley.RequestQueue;
import com.android.volley.Response;
import com.android.volley.VolleyError;
import com.android.volley.toolbox.StringRequest;
import com.android.volley.toolbox.Volley;

import org.json.JSONObject;

import java.util.HashMap;
import java.util.Map;

public class paymentbuy extends AppCompatActivity implements View.OnClickListener {
    EditText edbankname,edaccno,edpswd;
    Button btsubmit;

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_payment);
        edbankname=(EditText)findViewById(R.id.editText5);
        edaccno=(EditText)findViewById(R.id.editText14);
        edpswd=(EditText)findViewById(R.id.editText16);
        btsubmit=(Button)findViewById(R.id.button3);
        btsubmit.setOnClickListener(this);
    }

    @Override
    public void onClick(View view) {
        final String bank_name=edbankname.getText().toString();
        final String account_no=edaccno.getText().toString();
        final String password=edpswd.getText().toString();

        SharedPreferences sh= PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
        String hu = sh.getString("ip", "");
//        String url = "http://" + hu + ":5005/buy_products";
        String url = "http://" + hu + ":5005/and_payment_post";

        RequestQueue requestQueue = Volley.newRequestQueue(getApplicationContext());
        StringRequest postRequest = new StringRequest(Request.Method.POST, url,
                new Response.Listener<String>() {
                    @Override
                    public void onResponse(String response) {
                        //  Toast.makeText(getApplicationContext(), response, Toast.LENGTH_LONG).show();

                        // response
                        try {
                            JSONObject jsonObj = new JSONObject(response);
                            if (jsonObj.getString("status").equalsIgnoreCase("ok")) {

                                Toast.makeText(getApplicationContext(), "Successfully completed the payment", Toast.LENGTH_LONG).show();
                                startActivity(new Intent(paymentbuy.this,userhome.class));
                            }


                            // }
                            else {
                                Toast.makeText(getApplicationContext(), "Not found", Toast.LENGTH_LONG).show();
                            }

                        }    catch (Exception e) {
                            Toast.makeText(getApplicationContext(), "Error" + e.getMessage().toString(), Toast.LENGTH_SHORT).show();
                        }
                    }
                },
                new Response.ErrorListener() {
                    @Override
                    public void onErrorResponse(VolleyError error) {
                        // error
                        Toast.makeText(getApplicationContext(), "eeeee" + error.toString(), Toast.LENGTH_SHORT).show();
                    }
                }
        ) {
            @Override
            protected Map<String, String> getParams() {
                SharedPreferences sh = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
                Map<String, String> params = new HashMap<String, String>();

                params.put("bank_name",bank_name);
                params.put("account_no",account_no);
                params.put("pass",password);
                params.put("selerid",sh.getString("sel_sellerid",""));

                params.put("pid",sh.getString("product_id",""));
                params.put("price",sh.getString("price",""));


                params.put("qty",sh.getString("qty",""));
                params.put("u_id",sh.getString("lid",""));

                return params;
            }
        };

        int MY_SOCKET_TIMEOUT_MS=100000;

        postRequest.setRetryPolicy(new DefaultRetryPolicy(
                MY_SOCKET_TIMEOUT_MS,
                DefaultRetryPolicy.DEFAULT_MAX_RETRIES,
                DefaultRetryPolicy.DEFAULT_BACKOFF_MULT));
        requestQueue.add(postRequest);

    }
}
